# tp_fancontrol

./: Makefile.in  README.md  config.h.in  configure.ac
src/: Makefile.in  tp_fancontrol.c  tp_fancontrol.service
